@@ -1,6 +1,6 @@
 Package: crs
 Version: 0.15-18
-Date: 2013-03-22
+Date: 2013-03-23
 Depends:
 Suggests: np, npRmpi, rgl, quadprog, quantreg
 Title: Categorical Regression Splines
